testPhone调试ok,手动定位的按钮不显示调试,细节优化

--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireControl.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireControl.storyboard
@@ -23,7 +23,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nEd-C3-SXh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-924" y="171"/>
+            <point key="canvasLocation" x="-1097" y="170"/>
         </scene>
         <!--实时地图-->
         <scene sceneID="Cgo-Fd-9tp">
@@ -78,25 +78,19 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yb3-Sb-cBk" customClass="MAMapView">
                                 <rect key="frame" x="0.0" y="108" width="375" height="559"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YCK-ok-a4d">
-                                        <rect key="frame" x="10" y="10" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="Zp9-pn-DYR"/>
-                                            <constraint firstAttribute="height" constant="40" id="dOb-Ek-UbI"/>
-                                        </constraints>
-                                        <state key="normal" image="icon_map_location"/>
-                                        <connections>
-                                            <action selector="manualLocationBntClick:" destination="rYK-YH-62r" eventType="touchUpInside" id="usZ-HL-M53"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="YCK-ok-a4d" firstAttribute="top" secondItem="yb3-Sb-cBk" secondAttribute="top" constant="10" id="Scl-ta-MlT"/>
-                                    <constraint firstItem="YCK-ok-a4d" firstAttribute="leading" secondItem="yb3-Sb-cBk" secondAttribute="leading" constant="10" id="sg3-VA-lqI"/>
-                                </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YCK-ok-a4d">
+                                <rect key="frame" x="10" y="118" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="Zp9-pn-DYR"/>
+                                    <constraint firstAttribute="height" constant="40" id="dOb-Ek-UbI"/>
+                                </constraints>
+                                <state key="normal" image="icon_map_location"/>
+                                <connections>
+                                    <action selector="manualLocationBntClick:" destination="rYK-YH-62r" eventType="touchUpInside" id="usZ-HL-M53"/>
+                                </connections>
+                            </button>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZp-q0-eYc" customClass="YQImplementView" customModule="OpticalValleyUnite" customModuleProvider="target">
                                 <rect key="frame" x="20" y="387" width="335" height="240"/>
                                 <subviews>
@@ -211,8 +205,10 @@
                             <constraint firstItem="3qW-LL-TKh" firstAttribute="top" secondItem="iMj-Dd-UHX" secondAttribute="bottom" id="RMh-5C-cg6"/>
                             <constraint firstAttribute="trailing" secondItem="yb3-Sb-cBk" secondAttribute="trailing" id="XJL-bh-gH9"/>
                             <constraint firstAttribute="trailing" secondItem="3qW-LL-TKh" secondAttribute="trailing" id="Z9k-S0-rXu"/>
+                            <constraint firstItem="YCK-ok-a4d" firstAttribute="top" secondItem="3qW-LL-TKh" secondAttribute="bottom" constant="10" id="eKi-9n-s3E"/>
                             <constraint firstItem="qvP-Yw-RX8" firstAttribute="top" secondItem="yb3-Sb-cBk" secondAttribute="bottom" id="gv7-UC-aXf"/>
                             <constraint firstAttribute="trailing" secondItem="KZp-q0-eYc" secondAttribute="trailing" constant="20" id="hRY-cs-2hc"/>
+                            <constraint firstItem="YCK-ok-a4d" firstAttribute="leading" secondItem="bVF-D6-wei" secondAttribute="leading" constant="10" id="uab-sM-Tgu"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="实时地图" id="RNX-7K-Gq7"/>
@@ -228,7 +224,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q5K-Nm-a0m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-191.19999999999999" y="169.56521739130437"/>
+            <point key="canvasLocation" x="-92" y="170"/>
         </scene>
     </scenes>
     <resources>
